add email , dict, websocket, and logs